--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-requests
-sqlalchemy
-psycopg2-binary
-openai
-python-dotenv
+fastapi==0.111.0
+uvicorn[standard]==0.23.1
+requests==2.32.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+openai==1.31.0
+python-dotenv==1.0.0
