--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 fastapi==0.111.0
-uvicorn[standard]==0.23.1
+uvicorn==0.23.1
 requests==2.32.0
 sqlalchemy==1.4.52
 psycopg2-binary==2.9.11
-openai==1.31.0
-httpx==0.28.1
 python-dotenv==1.0.0
-pydantic==2.12.5
+openai==1.31.0
+python-multipart==0.0.20
